--- a/layouts/section/micro.html
+++ b/layouts/section/micro.html
@@ -2,7 +2,9 @@
 {{ partial "sidebar.html" . }}
 
 	<content>
-	  <h1>Microblog</h1>
+	  <h1><svg class="icon icon-power">
+				<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-power"></use>
+			</svg>microblog</h1>
 	  {{- range where .Site.Pages "Section" "micro" }}
 	    {{- .Content }}
 	    <small><a href="{{ .Permalink }}">{{ .Date.Format "02/01/06 15:04" }}</a></small>
