--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -22,9 +22,9 @@
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/reproach.css">
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/bigfoot-default.css">
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/webmention.css">
-  {{ if isset . "email" }}
-  <link rel="me" href="mailto:{{ .email }}" />
-  {{ end }}
+  {{- if .Site.Author.email }}
+  <link rel="me" href="mailto:{{ .Site.Author.email }}" />
+  {{- end }}
   <link rel="webmention" href="https://webmention.herokuapp.com/api/webmention" />
 </head>
 <body class="Site">
