--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
 		</section>
 	</main>
 	<footer>
-		<p class="feet">{{ .Site.Title }} &copy; {{ .Site.Author.name }} 2011-2016 &bull; Licenced under <a href="{{ .Site.BaseURL }}licence">CC-BY-NC-SA</a> &bull; Powered by <a href="http://pelican.readthedocs.org/en/latest/" title="Link to Pelican">pelican</a></p>
+		<p class="feet h-card vcard">{{ .Site.Title }} &copy; <a href={{ .Site.BaseURL }} class="p-name u-url">{{ .Site.Author.name }}</a> <span class="p-nickname">{{ .Site.Author.nick }} 2011-2016 &bull; Licenced under <a href="{{ .Site.BaseURL }}licence">CC-BY-NC-SA</a> </p>
 	</footer>
 </body>
 </html>
