--- a/layouts/article/single.html
+++ b/layouts/article/single.html
@@ -3,11 +3,11 @@
 {{ partial "sidebar.html" . }}
 
 	<content>
-		<article>
-		  <h1>{{ .Title }}</h1>
+		<article class="h-entry">
+		  <h1 class="p-name">{{ .Title }}</h1>
 		  {{ partial "metadata.html" . }}
+		  <div class="e-content"
 		  {{ .Content }}
-
 		</article>
 		
 {{ partial "articlepagination.html" . }}
